--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,3 +1,3 @@
 PORT=1337
-MONGODB_URI=
-JWT_SECRET=
+MONGODB_URI= mongodb+srv://a1eks0v:fdI24KTzHjdQUtdq@bsers.2lx81ge.mongodb.net/barangay?retryWrites=true&w=majority&appName=BSERS
+JWT_SECRET= goodshot@bsers
