--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^1.8.4",
     "chart.js": "^4.4.9",
+    "cors": "^2.8.5",
     "express": "^5.1.0",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
